--- a/css/mina-projekt.css
+++ b/css/mina-projekt.css
@@ -1,26 +1,60 @@
 body {
-    background-color: rgb(28, 28, 28);
-    color: rgb(243, 214, 133);
+    background-color: rgb(25, 25, 25);
+    overflow: hidden;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    padding: 10px;
+    justify-content: space-around;
 }
 
 .project {
     margin: 10px;
-    width: calc(100% / 3 - 20px);
+    width: calc(100vw / 3 - 33px);
+    height: 50vh;
+    background-color: #f1f1f1;
+    text-align: center;
+    font-size: 30px;
+    transition: transform .2s;
 }
 
-.project img {
-    width: 90%;
-    height: auto;
+.project:hover {
+    transform: scale(1.2);
+    z-index: 10;
+    /*Så att den lägger sig framför de andra sekunden man hovrar. Utan detta blir det lite fulare enligt mig*/
 }
 
-.project img:hover {
-    width: 100%;
-    height: auto;
+a {
+    /*Lite fusk men det får duga*/
+    width: inherit;
+    height: inherit;
+}
+
+img {
+    width: inherit;
+    height: inherit;
+}
+
+.project-info {
+    display: block;
+    position: fixed;
+    bottom: 5vh;
+    width: 50%;
+    text-align: center;
+    padding: 20px;
+    font-size: 20px;
+    color: rgba(243, 214, 133, 0);
+    transition: 0.5s color;
+}
+
+.hemknapp {
+    display: flex;
+}
+
+.instruktion {
+    position: absolute;
+    text-align: center;
+    color: rgb(243, 214, 133);
+    ;
 }
